--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "src/app.js",
   
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "start":"nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
